# pqai

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README  README-API.md  README.md  auth.py  docker-compose.yml  env  middleware.py  package-lock.json  package.json  pylintrc  pyproject.toml  requirements.macos.txt  requirements.txt  routes.py  server.js  server.py  test_vectorizer.py  unit_test.py
config/: config.py
core/: README.md  adducer.py  api.py  articulator.js  assignee-cleaner.js  classifiers.py  cpc2vec.py  datasets.py  db.py  documents.py  encoders.py  enhancer.js  filters.py  gf.py  highlighter.py  index.py  index_selection.py  indexer.py  indexes.py  matchpyramid.py  metrics.py  obvious.py  processor.js  query.py  query_generator.py  remote.py  representations.py  reranking.py  results.py  search.py  searcher.js  searcher.py  sensible_span_extractor.py  snippet.js  snippet.py  stats.js  storage.py  subclass_predictor.py  tech-neutral-words.json  text2vec.py  (+4 more)
docs/: README-API.md  template.html
indexes/: README.md
models/: README.md
scripts/: assign-subclass-npl.py  mongo2faiss.py  setup.sh
services/: vector_search.py
tests/: __init__.py  create_test_npl_db.py  test_Y04S.ttl.ann  test_Y04S.ttl.items.json  test_api.py  test_classifiers.py  test_datasets.py  test_db.py  test_doc.json  test_documents.py  test_embs.tsv  test_encoders.py  test_entities.vocab  test_file  test_filters.py  test_index_selection.py  test_indexes.py  test_npl_docs.json  test_obvious.py  test_representations.py  test_search.py  (+6 more)
(+44 files in other folders)
