[tool.poetry]
name = "pqai"
version = "3.5.7"
description = "PQAI Prior Art Search Engine"
authors = ["Mahesh Maan <mahesh@projectpq.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python=">=3.8,<3.11"
waitress = "^2.1.2"
python-dotenv = "^1.0.0"
flask = "2.1.1"
flask-api = "3.0b6"
werkzeug = "2.2.2"
sentry-sdk = "^1.38.0"
blinker = "^1.7.0"
opencv-python = "^4.8.1.78"
markdown = "^3.5.1"
boto3 = "^1.33.7"
scikit-learn = "^1.3.2"
sentence-transformers = "^2.2.2"
numba = "^0.58.1"
pymongo = "^4.6.1"
keras = "2.8.0"
tensorflow = "2.8.1"
protobuf = "3.20"
keras-bert = "^0.89.0"
annoy = "^1.17.3"
faiss-cpu = "^1.7.4"
psutil = "^5.9.6"
bs4 = "^0.0.1"
usearch = "2.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
